deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pospai
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
